Moves back to OpenAI and adds server.py as an example

--- a/playground.ipynb
+++ b/playground.ipynb
@@ -51,37 +51,37 @@
      "data": {
       "text/plain": [
        "{'id': 1,\n",
-       " 'first_name': 'Magnus',\n",
-       " 'last_name': 'Bailey',\n",
-       " 'email': 'magnus.bailey@hotmail.com',\n",
-       " 'phone_number': '+10881349201',\n",
-       " 'city': 'Fort June',\n",
-       " 'state': 'NH',\n",
-       " 'total_products_purchased': 4,\n",
-       " 'most_recent_purchase': 'SunSync',\n",
-       " 'web_pages_viewed': 20,\n",
-       " 'web_time_spent': 174,\n",
-       " 'web_last_visit': '2023-05-18T04:52:18.330Z',\n",
-       " 'facebook_likes': 3,\n",
-       " 'facebook_comments': 0,\n",
+       " 'first_name': 'Darby',\n",
+       " 'last_name': 'Schulist',\n",
+       " 'email': 'darby81@gmail.com',\n",
+       " 'phone_number': '+17801228216',\n",
+       " 'city': 'Samircester',\n",
+       " 'state': 'MD',\n",
+       " 'total_products_purchased': 1,\n",
+       " 'most_recent_purchase': 'EcoShades',\n",
+       " 'web_pages_viewed': 11,\n",
+       " 'web_time_spent': 71,\n",
+       " 'web_last_visit': '2023-05-23T06:51:19.363Z',\n",
+       " 'facebook_likes': 1,\n",
+       " 'facebook_comments': 3,\n",
        " 'facebook_shares': 3,\n",
-       " 'instagram_likes': 28,\n",
-       " 'instagram_comments': 7,\n",
+       " 'instagram_likes': 47,\n",
+       " 'instagram_comments': 6,\n",
        " 'instagram_shares': 1,\n",
-       " 'twitter_likes': 4,\n",
-       " 'twitter_comments': 5,\n",
-       " 'twitter_shares': 1,\n",
-       " 'cust_support_number_of_interactions': 3,\n",
-       " 'cust_last_interaction': '2023-05-18T01:15:31.237Z',\n",
-       " 'csat': 0.89,\n",
-       " 'emails_opened_last_30_days': 2,\n",
-       " 'email_open_rate': 0.51,\n",
-       " 'email_click_through_rate': 63,\n",
+       " 'twitter_likes': 3,\n",
+       " 'twitter_comments': 2,\n",
+       " 'twitter_shares': 4,\n",
+       " 'cust_support_number_of_interactions': 9,\n",
+       " 'cust_last_interaction': '2023-05-22T21:30:32.979Z',\n",
+       " 'csat': 0.11,\n",
+       " 'emails_opened_last_30_days': 6,\n",
+       " 'email_open_rate': 0.47,\n",
+       " 'email_click_through_rate': 0,\n",
        " 'attended_events': [],\n",
-       " 'promotions_used': ['Lens Upgrade'],\n",
-       " 'propensity_to_buy': 0.02,\n",
-       " 'lifetime_value': 1090.57,\n",
-       " 'customer_acquisition_cost': 89.17}"
+       " 'promotions_used': [],\n",
+       " 'propensity_to_buy': 0.95,\n",
+       " 'lifetime_value': 513.78,\n",
+       " 'customer_acquisition_cost': 295.31}"
       ]
      },
      "execution_count": 3,
@@ -117,7 +117,7 @@
     {
      "data": {
       "text/plain": [
-       "'Shadazzle sells smart sunglasses that combine fashion and technology. The sunglasses feature built-in Bluetooth technology, which allows users to connect to their phone and enjoy hands-free calling and music streaming. The frames and lenses are also customizable, allowing customers to create a personalized look that suits their style. In addition to the sunglasses, Shadazzle also sells accessories such as cases and cleaning kits. '"
+       "\"Shadazzle sells smart sunglasses that combine fashion and technology. The sunglasses feature built-in Bluetooth technology, which allows users to connect to their phone and enjoy hands-free calling and music streaming. The frames and lenses are also customizable, allowing customers to create a personalized look that suits their style. In addition to the smart sunglasses, Shadazzle also offers accessories such as cases and cleaning kits. \\r\\n\\r\\nShadazzle's products are designed to enhance the everyday lives of its customers. The company's focus is on providing high-quality, innovative products that combine fashion and technology in a way that enhances its customers' daily lives.\""
       ]
      },
      "execution_count": 4,
@@ -225,14 +225,24 @@
    "outputs": [],
    "source": [
     "from langchain.chains import APIChain\n",
-    "from langchain.llms import GooglePalm"
+    "from langchain.llms import OpenAI"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/cdennis/Code/twilio/demos/llms/llm-trip-saver/venv/lib/python3.11/site-packages/langchain/llms/openai.py:169: UserWarning: You are trying to use a chat model. This way of initializing it is no longer supported. Instead, please use: `from langchain.chat_models import ChatOpenAI`\n",
+      "  warnings.warn(\n",
+      "/Users/cdennis/Code/twilio/demos/llms/llm-trip-saver/venv/lib/python3.11/site-packages/langchain/llms/openai.py:696: UserWarning: You are trying to use a chat model. This way of initializing it is no longer supported. Instead, please use: `from langchain.chat_models import ChatOpenAI`\n",
+      "  warnings.warn(\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -240,43 +250,46 @@
       "\n",
       "\n",
       "\u001b[1m> Entering new APIChain chain...\u001b[0m\n",
-      "\u001b[32;1m\u001b[1;3mhttps://llm-companies.cyclic.app/api/shadazzle/profiles?id=42&_limit=1\u001b[0m\n",
+      "\u001b[32;1m\u001b[1;3mhttps://llm-companies.cyclic.app/api/shadazzle/profiles?id=42&_limit=1&fields=id,email,first_name,last_name,phone_number,city,state,total_products_purchased,most_recent_purchase,promotions_used,propensity_to_buy,lifetime_value,customer_acquisition_cost\u001b[0m\n",
       "\u001b[33;1m\u001b[1;3m[\n",
       "  {\n",
       "    \"id\": 42,\n",
-      "    \"first_name\": \"Torrey\",\n",
-      "    \"last_name\": \"Casper\",\n",
-      "    \"email\": \"torrey_casper@gmail.com\",\n",
-      "    \"phone_number\": \"+14116176888\",\n",
-      "    \"city\": \"Fort Larrystead\",\n",
-      "    \"state\": \"IA\",\n",
-      "    \"total_products_purchased\": 2,\n",
-      "    \"most_recent_purchase\": \"EcoShades\",\n",
-      "    \"web_pages_viewed\": 2,\n",
-      "    \"web_time_spent\": 117,\n",
-      "    \"web_last_visit\": \"2023-05-18T18:10:22.377Z\",\n",
-      "    \"facebook_likes\": 7,\n",
+      "    \"first_name\": \"Justice\",\n",
+      "    \"last_name\": \"Mayert\",\n",
+      "    \"email\": \"justice45@yahoo.com\",\n",
+      "    \"phone_number\": \"+10328094574\",\n",
+      "    \"city\": \"South Kathleenmouth\",\n",
+      "    \"state\": \"ME\",\n",
+      "    \"total_products_purchased\": 3,\n",
+      "    \"most_recent_purchase\": \"MoodShades\",\n",
+      "    \"web_pages_viewed\": 8,\n",
+      "    \"web_time_spent\": 264,\n",
+      "    \"web_last_visit\": \"2023-05-22T23:16:23.807Z\",\n",
+      "    \"facebook_likes\": 3,\n",
       "    \"facebook_comments\": 2,\n",
-      "    \"facebook_shares\": 5,\n",
-      "    \"instagram_likes\": 21,\n",
-      "    \"instagram_comments\": 0,\n",
-      "    \"instagram_shares\": 4,\n",
-      "    \"twitter_likes\": 8,\n",
+      "    \"facebook_shares\": 2,\n",
+      "    \"instagram_likes\": 26,\n",
+      "    \"instagram_comments\": 3,\n",
+      "    \"instagram_shares\": 3,\n",
+      "    \"twitter_likes\": 6,\n",
       "    \"twitter_comments\": 2,\n",
-      "    \"twitter_shares\": 1,\n",
-      "    \"cust_support_number_of_interactions\": 6,\n",
-      "    \"cust_last_interaction\": \"2023-05-18T00:56:51.534Z\",\n",
-      "    \"csat\": 0.06,\n",
-      "    \"emails_opened_last_30_days\": 9,\n",
-      "    \"email_open_rate\": 0.69,\n",
-      "    \"email_click_through_rate\": 90,\n",
+      "    \"twitter_shares\": 4,\n",
+      "    \"cust_support_number_of_interactions\": 10,\n",
+      "    \"cust_last_interaction\": \"2023-05-23T10:32:32.584Z\",\n",
+      "    \"csat\": 0.79,\n",
+      "    \"emails_opened_last_30_days\": 7,\n",
+      "    \"email_open_rate\": 0.65,\n",
+      "    \"email_click_through_rate\": 39,\n",
       "    \"attended_events\": [\n",
+      "      \"NY Fashion Week\",\n",
       "      \"Coachella\"\n",
       "    ],\n",
-      "    \"promotions_used\": [],\n",
-      "    \"propensity_to_buy\": 0.88,\n",
-      "    \"lifetime_value\": 598.76,\n",
-      "    \"customer_acquisition_cost\": 187.23\n",
+      "    \"promotions_used\": [\n",
+      "      \"Frame Your Style\"\n",
+      "    ],\n",
+      "    \"propensity_to_buy\": 0.15,\n",
+      "    \"lifetime_value\": 836.58,\n",
+      "    \"customer_acquisition_cost\": 238.69\n",
       "  }\n",
       "]\u001b[0m\n",
       "\n",
@@ -286,17 +299,17 @@
     {
      "data": {
       "text/plain": [
-       "'The user profile with id 42 is owned by Torrey Casper. They have purchased 2 products, the most recent being EcoShades. They have viewed 2 web pages and spent 117 seconds on the site. Their last visit was on 2023-05-18T18:10:22.377Z.'"
+       "'Profile id 42 belongs to Justice Mayert with email justice45@yahoo.com. They have purchased 3 products, with the most recent purchase being MoodShades. They have viewed 8 web pages and spent 264 seconds on the website during their last visit on May 22, 2023. They have interacted with customer support 10 times and their last interaction was on May 23, 2023. Their CSAT score is 0.79 and they have opened 7 emails in the last 30 days with an open rate of 0.65 and a click-through rate of 39%. They have attended NY Fashion Week and Coachella events and used the promotion \"Frame Your Style\". Their propensity to buy is 0.15 and their lifetime value is $836.58 with a customer acquisition cost of $238.69.'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "profiles_prompt = \"What do you know about profile id 42?\"\n",
-    "llm = GooglePalm(temperature=0)\n",
+    "llm = OpenAI(model_name=os.environ[\"OPENAI_MODEL\"], temperature=0)\n",
     "api_chain = APIChain.from_llm_and_api_docs(llm, docs, verbose=True)\n",
     "result = api_chain.run(profiles_prompt)\n",
     "result\n",
