--- a/playground.ipynb
+++ b/playground.ipynb
@@ -225,7 +225,7 @@
    "outputs": [],
    "source": [
     "from langchain.chains import APIChain\n",
-    "from langchain.llms import OpenAI"
+    "from langchain.chat_models import ChatOpenAI"
    ]
   },
   {
@@ -309,7 +309,7 @@
    ],
    "source": [
     "profiles_prompt = \"What do you know about profile id 42?\"\n",
-    "llm = OpenAI(model_name=os.environ[\"OPENAI_MODEL\"], temperature=0)\n",
+    "llm = ChatOpenAI(model_name=os.environ[\"OPENAI_MODEL\"], temperature=0)\n",
     "api_chain = APIChain.from_llm_and_api_docs(llm, docs, verbose=True)\n",
     "result = api_chain.run(profiles_prompt)\n",
     "result\n",
